--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -9,7 +9,7 @@
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！
-// @Version           V2.0(188)
+// @Version           V2.0(190)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -30,12 +30,12 @@ hostname = adapi.izuiyou.com, i.ys7.com, apps.api.ke.com, api.yonghuivip.com, ac
 
 # ======= 0~9 ======= #
 # > 58
-^https?:\/\/.+\.58cdn\.com\.cn\/brandads\/ url reject
-^https?:\/\/app\.58\.com\/api\/home\/advertising\/ url reject
-^https?:\/\/app\.58\.com\/api\/home\/appadv\/ url reject-200
+^https?:\/\/.+\.58cdn\.com\.cn\/brandads\/ url reject-200
+^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject-200
 # > 555
-^https:\/\/vip7\.fzwdyy\.cn:8083\/api\/getAdvertInfo url reject-200
-^https:\/\/vip7\.fzwdyy\.cn:8083\/api\/getGOOGAdvert url reject-200
+^https:\/\/vip7\.fzwdyy\.cn:8083\/api\/(getAdvertInfo|getGOOGAdvert) url reject-200
+# > 12123
+^https:\/\/gab\.122\.gov\.cn\/eapp\/m\/sysquery url reject
 # > 12306
 ^https?:\/\/ad\.12306\.cn\/ad\/ser\/getAdList url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/12306.js
 
@@ -84,14 +84,14 @@ hostname = adapi.izuiyou.com, i.ys7.com, apps.api.ke.com, api.yonghuivip.com, ac
 # ======= C ======= #
 # > clicli
 ^https?:\/\/js-ad\.ayximgs\.com\.ad-universe-cdn\.hzhcbkj\.cn\/xgapp\.php\/v2\/top_notice url reject-200
-# > chelaile@ddgksf2013
+# > chelaile
 ^https?:\/\/cdn\.\w{3}\.chelaileapp\.cn\/(api\/)?adpub url reject-dict
 ^https?:\/\/api.chelaile.net.cn\/adpub\/ url reject
 ^https?:\/\/api.chelaile.net.cn\/goocity\/advert\/ url reject
 ^https?:\/\/atrace.chelaile.net.cn\/adpub\/ url reject
 ^https?:\/\/atrace.chelaile.net.cn\/exhibit\?&adv_image url reject
 ^https?:\/\/pic1.chelaile.net.cn\/adv\/ url reject
-# > Crunchyroll@Marcio2536
+# > Crunchyroll
 https://beta-api.crunchyroll.com/cms url response-body offset_ms":\d+ response-body offset_ms":99999999999999
 # > chaoxingxuexitong
 ^https?:\/\/learn\.chaoxing\.com\/apis\/service\/appConfig url reject
@@ -115,16 +115,16 @@ https://beta-api.crunchyroll.com/cms url response-body offset_ms":\d+ response-b
 ^https?:\/\/maicai\.api\.ddxq\.mobi\/advert\/ url reject
 # > didachuxing
 ^https?:\/\/capis(-?\w*)?\.didapinche\.com\/ad\/cx\/startup\? url reject
-# > didichuxing@ddgksf2013
+# > didichuxing
 https?://res\.xiaojukeji\.com\/resapi\/activity\/mget url reject-dict
 https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNotices) url reject
-# > daoyu@ddgksf2013
+# > daoyu
 ^https?:\/\/daoyu\.sdo\.com\/api\/userCommon\/getAppStartAd url reject
-# > douyu@kyle
+# > douyu
 ^https?:\/\/rtbapi\.douyucdn\.cn\/japi\/sign\/app\/getinfo url reject
-# > dewu@kyle
+# > dewu
 ^https:\/\/app\.dewu\.com\/api\/v1\/app\/advertisement\/ url reject
-# > donghuafeng@NobyDa
+# > donghuafeng
 ;^https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v\d/(token|m3u8).php\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutAnimeAds.js
 # > dazhihui
 ^https?://ssp\.dzh\.com\.cn/v2api/adgroupjson url reject
@@ -152,7 +152,7 @@ https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNot
 # ======= F ======= #
 # > feizhu
 ^https?:\/\/gw\.alicdn\.com\/imgextra\/\w{2}\/[\w!]+-\d-tps-\d{3}-\d{4}\.(jpg|png)$ url reject
-# > feikechaguan@ddgksf2013
+# > feikechaguan
 ^https?:\/\/47\.100\.65\.202\/source\/plugin\/mobile\/mobile\.php\?module=advis url reject
 ^https?:\/\/47\.100\.65\.202\/api\/mobile\/index\.php\?version=\d&mobile=yes&module=basicdata&type=forumlist url response-body adv response-body ddgksf2013
 ^https?:\/\/47\.100\.65\.202\/source\/plugin\/mobile\/mobile\.php\?module=threadpost&.+?&page=1 url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/fly.js
@@ -162,11 +162,11 @@ https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNot
 # > gongshijilu
 ^https:\/\/mi\.gdt\.qq\.com\/gdt_mview\.fcg url reject
 ^https:\/\/open\.e\.kuaishou\.com\/rest\/e\/v3\/open\/univ url reject
-# > gaidepaihang@ddgksf2013
+# > gaidepaihang
 https://zone.guiderank-app.com/guiderank-web/app/ad/listLaunchADByCity.do url reject
 # > gaode
 ^https?:\/\/m5.amap.com\/ws\/valueadded\/ url reject
-# > guanyu@ddgksf2013
+# > guanyu
 https://guanyu.longfor.com/app-server/api/v1/main/start url reject
 # > guangqibentian
 ^https?:\/\/gha\.ghac\.cn\:8081\/base\/app\/api\/ad\/query\?adType url reject-200
@@ -184,23 +184,23 @@ https://guanyu.longfor.com/app-server/api/v1/main/start url reject
 ^https?:\/\/hcz-member\.pingan\.com\.cn\/micro-api\/homepage\/do\/app\/popbox\/getTopPopBox url reject-200
 # > huazhu
 ^https?:\/\/appapi\.huazhu\.com:\d{4}\/client\/app\/getAppStartPage\/ url reject
-# > hupu@ddgksf2013
+# > hupu
 ^https?:\/\/i\d\.hoopchina\.com\.cn/blogfile\//d+\//d+\/BbsImg\.(?<=(big.(png|jpg)))$ url reject-img
 ^https?:\/\/games\.mobileapi\.hupu\.com\/.+\/(search|interfaceAdMonitor|status|hupuBbsPm)/(hotkey|init|hupuBbsPm)\. url reject-img
 ^https?:\/\/games\.mobileapi\.hupu\.com\/interfaceAdMonitor url reject-img
 ^https?:\/\/goblin\.hupu\.com\/.+\/interfaceAd\/getOther url reject
 ^https?:\/\/i1\.hoopchina\.com\.cn\/blogfile\/.+_\d{3}x\d{4} url reject-img
-# > hongbanbao@ddgksf2013
+# > hongbanbao
 https://fbchina.flipchina.cn/v2/ad/query/* url reject
 # > huyazhibo
 ^http?:\/\/business\.msstatic\.com\/advertiser\/material url reject-dict
-# > haoqixinribao@ddgksf2013
+# > haoqixinribao
 ^https?:\/\/app3\.qdaily\.com\/app\d\/boot_advertisements\.json url reject
-# > huxiu@ddgksf2013
+# > huxiu
 ^https:\/\/api-ad-product\.huxiu\.com\/Api\/Product\/SDK\/Advert\/Query\/queryAdvertListInfo url reject
-# > huangyouxiangji@ddgksf2013
+# > huangyouxiangji
 ^https?:\/\/api4\.bybutter\.com\/v\d\/app\/placements\/\d\/advertisements url reject
-# > hanglvzongheng@ddgksf2013
+# > hanglvzongheng
 ^http?:\/\/(discardrp|startup)\.umetrip\.com\/gateway\/api\/umetrip\/native url reject
 # > hangzhougongjiao
 ^https?:\/\/m.ibuscloud.com\/v2\/app\/getStartPage url reject
@@ -213,7 +213,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject
 # ======= I ======= #
 # > i4
 ^https?:\/\/list-app-m\.i4\.cn\/getopfstadinfo\.xhtml url reject
-# > i3@ddgksf2013
+# > i3
 #^https?:\/\/www\.i3zh\.com url response-body cm-pop-up-banners response-body ddgksf2013
 
 
@@ -236,17 +236,15 @@ https://jdread-api.jd.com/jdread/api/popup url reject-200
 # > jingdonglite
 ^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=lite_advertising url response-body jdLiteAdvertisingVO response-body ddgksf2013
 ^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=lite_SmartPush url response-body pushData response-body ddgksf2013
-# > jiaohangmaidanba@HotKids
+# > jiaohangmaidanba
 ^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/queryGuidePageAds\.do$ url reject-200
 ^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/getPopAds\.do$ url reject-200
-# > jiemianxinwen@ddgksf2013
+# > jiemianxinwen
 ^https?:\/\/img\.jiemian\.com\/ads\/ url reject
-# > jinshi@kyle
+# > jinshi
 ^https?:\/\/jad-api\.jin10\.com\/ad url reject
-# > JsCMCC@ddgksf2013
+# > JsCMCC
 ^https?+:\/\/wap\.js\.10086\.cn\/jsmccClient\/cd\/market_content\/api\/v\d\/market_content\.page\.query url reject-200
-# > 12123@kyle
-^https:\/\/gab\.122\.gov\.cn\/eapp\/m\/sysquery url reject
 # > jijianhuilv
 ^https?:\/\/explorer\.tratao\.com\/api\/client\/v4\/xtransfer\/ad\/ url reject
 # > jiaxiaoediantong
@@ -267,7 +265,7 @@ https://jdread-api.jd.com/jdread/api/popup url reject-200
 ^https?:\/\/mobilead\.kuwo\.cn\/EcomResourceServer\/adBubble\/.+ url reject
 # > kuaikan
 ^https?:\/\/api.kkmh.com\/v\d\/(ad|advertisement)\/ url reject
-# > Keep@ddgksf2013
+# > Keep
 ^https?:\/\/api\.gotokeep\.com\/kprime\/v\d\/popups\/primeGuide url reject
 ^https?:\/\/kad\.gotokeep\.com\/op-engine-webapp\/v\d\/ad url reject
 https://api.gotokeep.com/cauchy/user/notice/growth/guide url reject-dict
@@ -284,14 +282,14 @@ https://api.gotokeep.com/cauchy/user/notice/growth/guide url reject-dict
 https://api.gotokeep.com/homepage/v7/tab/find url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/keepStyle.js
 https://api.gotokeep.com/nuocha/course/v2/\w+/preview url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/keepStyle.js
 https://api.gotokeep.com/sportpage/sport/v3/mysport url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/keepStyle.js
-# > ku'an@kk pp
+# > ku'an
 ^https?:\/\/api\.coolapk\.com\/v6\/(feed\/(replyList|detail)|main\/indexV8|dataList) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/coolapk.js
 ^https?://api-access\.pangolin-sdk-toutiao\.com/api/ad/union/sdk url reject
-# > kuan@ddgksf2013
+# > kuan
 ^https?:\/\/api\.coolapk\.com\/v6\/search\?.*type=hotSearch url reject-dict
 # > kanlixiang
 ^https?:\/\/api\.vistopia\.com\.cn\/api\/v\d\/home\/advertisement url reject-dict
-# > kantianxia@ddgksf2013
+# > kantianxia
 https://open3.vistastory.com/v3/api/index/loading_ad url reject
 https://open3.vistastory.com/v3/api.*get_popup url reject
 # > kuaishou
@@ -299,16 +297,16 @@ https://open3.vistastory.com/v3/api.*get_popup url reject
 
 
 # ======= L ======= #
-# > LinXi@ddgksf2013
+# > LinXi
 ^https?:\/\/api\.internetofcity\.cn\/api\/resource\/anon\/popups\/getSplashList url reject-dict
 ^https?:\/\/api\.internetofcity\.cn\/api\/resource\/anon\/popups\/getList url reject-dict
 # > LeCheng
 https://dl-cu-hz.lechange.cn/oms-online/advertisementPush/* url reject
-# > Block 100@ddgksf2013
+# > Block 100
 https://tagit.hyhuo.com/recover/list url reject
-# > LaiChon@ddgksf2013
+# > LaiChon
 ^https?:\/\/(mobile|shop)\.laichon\.com\/api\/(v1\/goods\/goodsList|exposureAdvStatistics|getWebAdvList) url reject-dict
-# > LiangBulU@ddgksf2013
+# > LiangBulU
 # host-suffix, admobile.top, reject
 https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSplashFrequencyStatistics|getPopInfo|getAppEntranceConfig|promote\/list|getSplash|outing\/reqFoundNewList|outing\/reqIndex) url reject
 # > LanRenTingShu
@@ -334,19 +332,19 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 ^https?:\/\/capi.mwee.cn\/app-api\/V12\/app\/getstartad url reject
 # > MaFengWo
 ^https://mapi.mafengwo.cn\/ad\/get_launch_ad_list\/v2 url reject
-# > MaiDuiDui@ddgksf2013
+# > MaiDuiDui
 ^https?:\/\/mob\.mddcloud\.com\.cn\/adApi\/advert url reject
-# > ManHuaRen@ddgksf2013
+# > ManHuaRen
 ^https?://tel.mangaapi.manhuaren.com/(v2/public/getStartUpMessage|v1/public/getStartPageAds) url reject
 http://tel.mangaapi.manhuaren.com/v2/ad/getMultiAdsStrategy url reject
 http://mangaapi.manhuaren.com/v2/public/getShelfActivity url reject
 ^https?://mangaapi.manhuaren.com/(v2/public/getStartUpMessage|v1/public/getStartPageAds) url reject
 http://mangaapi.manhuaren.com/v2/ad/getMultiAdsStrategy url reject
-# > MIX@kyle
+# > MIX
 ^https:\/\/dispatcher\.camera360\.com\/api\/v1\/list$ url reject
-# > MaKaLong@kyle
+# > MaKaLong
 ^https:\/\/app\.api\.versa-ai\.com\/launch\/ads\? url reject
-# > MoMo@ddgksf2013
+# > MoMo
 ^https?:\/\/open\.taou\.com\/maimai\/launch_ad url reject
 ^https?:\/\/api\.taou\.com\/sdk\/global\/splash_ad url reject
 ^https?:\/\/track\.mm\.taou\.com/v\d\/track url reject
@@ -359,7 +357,7 @@ http://mangaapi.manhuaren.com/v2/ad/getMultiAdsStrategy url reject
 # ======= O ======= #
 # > omofun
 ^https?:\/\/103\.91\.210\.141\:2515\/xgapp\.php\/v2\/top_notice url reject-200
-# > One@ddgksf2013
+# > One
 ^http:\/\/app\.api\.d3yuiw4\.com\/api\/app\/ad url reject
 # > Oray
 ^https?:\/\/slapi\.oray\.net\/client\/ad url reject
@@ -385,7 +383,7 @@ https://access.mypikpak.com/access_controller/v1/area_accessible url reject-200
 # ======= Q ======= #
 # > qqbrower
 ^https:\/\/us\.l\.qq\.com\/exapp\?spsa=\d url reject
-# > QuNaEr@ddgksf2013
+# > QuNaEr
 https://homefront.qunar.com/front/splash/ad url reject
 ^https?:\/\/client\.qunar\.com\/pitcher-proxy\?qrt=p_splashAd url reject
 # > QiCheZhiJia
@@ -396,7 +394,7 @@ https://homefront.qunar.com/front/splash/ad url reject
 
 
 # ======= R ======= #
-# > RenMinRiBao@ddgksf2013
+# > RenMinRiBao
 ^https:\/\/app\.peopleapp\.com\/Api\/\d+/HomeApi\/getAdvertImage url reject
 ^https:\/\/app\.peopleapp\.com\/Api\/\d+/HomeApi\/adv url reject-dict
 ^https?:\/\/stat\.peopleapp\.com\/ url reject
@@ -407,9 +405,9 @@ https://homefront.qunar.com/front/splash/ad url reject
 https://ios.sspai.com/api/v3/recommend/page/get\?ad.*ios_home_modal url reject
 # > ShunFengYouXuan
 ^https://mapi.sfbest.com\/brokerservice-server\/cms\/getPositionById.* url reject
-# > spotify pro@app2smile
+# > spotify pro
 ^https:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-proto.js
-# > spotify@ddgksf2013
+# > spotify
 ^https?://spclient.wg.spotify.com/ad-logic/* url reject-img
 ^https?://spclient.wg.spotify.com/ads/* url reject-img
 ^https?://spclient.wg.spotify.com/.+ad_slot url reject-img
@@ -421,20 +419,20 @@ https://ios.sspai.com/api/v3/recommend/page/get\?ad.*ios_home_modal url reject
 ^https?://spclient.wg.spotify.com/.+enabled-tracks url reject-img
 ^https?://spclient.wg.spotify.com/.+promoted_offer url reject-img
 ^https?:\/\/api\d?\.musical\.ly\/api\/ad\/ url reject-img
-# > SanLianZhongDu@ddgksf2013
+# > SanLianZhongDu
 https://apis.lifeweek.com.cn/api/baseConfig/getIosNewConfig url reject
-# > ShunFeng@ddgksf2013
+# > ShunFeng
 ^https?:\/\/ccsp-egmas\.sf-express\.com\/cx-app-base\/base\/app\/appVersion\/detectionUpgrade url reject-dict
 https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryInfoFlow url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/shunfeng_json.js
 https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryAdImages url reject-dict
 ^https?:\/\/shopic\.sf-express\.com\/crm\/mobile\/common\/flashscreen url reject
-# > ShanDongCMCC@ddgksf2013
+# > ShanDongCMCC
 https?:\/\/m\.sd\.10086\.cn\/zapi\/app_common\/homeWelcome\/welcome.do url reject-dict
 # > shihuo
 ^https?:\/\/sh-gateway\.shihuo\.cn\/v\d\/services\/sh-adapi\/home\/screen url reject-200
-# > Soul@kyle
+# > Soul
 ^https:\/\/data-collector\.soulapp\.cn\/api\/data\/report$ url reject
-# > Stay@ddgksf2013
+# > Stay
 ^https?:\/\/api\.shenyin\.name\/stay-fork\/browse\/featured$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/stay.js
 # > suning
 ^https?:\/\/mpcs\.suning\.com\/mpcs\/dm\/getDmInfo url reject
@@ -456,11 +454,11 @@ https?:\/\/m\.sd\.10086\.cn\/zapi\/app_common\/homeWelcome\/welcome.do url rejec
 ^https://otheve.beacon.qq.com\/analytics\/upload\?sid=.* url reject
 # > TuNiu
 ^https?:\/\/m\.tuniu\.com\/api\/operation\/splash\/ url reject
-# > TaoPiaoPiao@fangpide
+# > TaoPiaoPiao
 ^https://acs.m.taobao.com\/gw\/mtop.film.mtopadvertiseapi.queryadvertise\/5.0.* url reject
-# > TianTianJiJin@ddgksf2013
+# > TianTianJiJin
 ^https?:\/\/appactive\.1234567\.com\.cn\/AppoperationApi\/OperationService\/GetAppStartImg url reject-dict
-# > topwidget@ddgksf2013
+# > topwidget
 https://top-widgets-api.xiaozujian.com/api/ad/config url reject-200
 # > TencentNews
 ^https?:\/\/r\.inews\.qq\.com\/(adsBlacklist|getFullScreenPic|getQQNewsRemoteConfig) url reject
@@ -493,12 +491,12 @@ https://mapi.appvipshop.com/vips-mobile/rest/activity/advertisement/get url reje
 # > WangYiYouXiang
 ^https?:\/\/appconf\.mail\.163\.com\/mmad\/get\.do url reject
 ^https?:\/\/client\.mail\.163.com\/apptrack\/confinfo\/(searchMultiAds.do|showAds.do) url reject
-# > WangYiYanXuan@ddgksf2013
+# > WangYiYanXuan
 https://support.you.163.com/appversync/check.do url reject
 ^https?+:\/\/support\.you\.163\.com\/xhr\/boot\/getBootMedia\.json url reject
 ^https?:\/\/yanxuan.nosdn.127.net\/(static-union\/)?.*\.gif url reject
 https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject-dict
-# > WeChat110@zZPiglet
+# > WeChat110
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/zZPiglet/Task/master/asset/UnblockURLinWeChat.js
 # > weixindaihuo
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/cps_product_info url reject-200
@@ -521,7 +519,7 @@ https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject-dict
 ^https?:\/\/bgw\.xinyue\.qq\.com\/xyapi\.PageService\/GetIndexPopFlash url reject-200
 # > xierdun
 ^https?:\/\/wcprd\.hilton\.com\.cn\/app-middleware\/graphql\?type=splashAd url reject-200
-# > XiaoHongShu@ddgksf2013
+# > XiaoHongShu
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/splash_config url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/xiaohongshu.js
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/homefeed\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/xiaohongshu.js
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/config\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/xiaohongshu.js
@@ -533,7 +531,7 @@ https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject-dict
 ^https?:\/\/referee\.xiaohongshu\.com\/v\d\/stateReport url reject-dict
 ^https?:\/\/pages\.xiaohongshu\.com\/data\/native\/matrix_switches url reject-dict
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/user\/teenager\/status url reject-dict
-# > XiaoTe@ddgksf2013
+# > XiaoTe
 ^https?:\/\/lcen\.xiaote\.net\/api\/graphql url response-body screenSplashAd response-body ddgksf2013
 # > XiaoShuiMian
 ^https?:\/\/api.psy-1.com\/cosleep\/startup url reject
@@ -542,13 +540,13 @@ https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject-dict
 ^https:\/\/m\.ctrip\.com\/restapi\/.+json\/tripAds url reject
 ^https:\/\/m\.ctrip\.com\/html5\/webresource\/js\/iscroll\.js$ url reject
 ^https:\/\/mbd\.baidu\.com\/newspage\/api\/getmobads\?page\=landingshare url reject
-# > XiChuangZhu@ddgksf2013
+# > XiChuangZhu
 ^https?:\/\/lchttpapi\.xczim\.com\/1\.1\/functions\/getLaunchImageForIOS url reject-dict
 # > XianYu
 ^https:\/\/gw.alicdn.com\/mt\/ url reject
 ^https:\/\/gw.alicdn.com\/tfs\/.+\d{3,4}-\d{4} url reject
 ^https:\/\/gw.alicdn.com\/tps\/.+\d{3,4}-\d{4} url reject
-# > XiaoYi@ddgksf2013
+# > XiaoYi
 ^https://api.xiaoyi.com\/v5\/app\/mobile\/ads url reject
 ^https://api.xiaoyi.com\/v5\/app\/config\?userid=.* url reject
 # > xiachufang
@@ -572,12 +570,12 @@ https:\/\/yanxuan.nosdn.127.net\/.*\.mp4 url reject-dict
 ^https?:\/\/cdn\.cmgadx\.com\/sdk\/pool\/\w+\.json url reject-200
 # > YiHaoDian
 ^https?:\/\/venus\.yhd\.com\/memhome\/launchConfig url reject
-# > YiKaoBang@ddgksf2013
+# > YiKaoBang
 ^https?:\/\/api\.yikaobang\.com\.cn\/client\/main\/homePageSmallAd url reject
 ^https?:\/\/api\.yikaobang\.com\.cn\/index\.php\/Client\/main\/startPage url reject
-# > YouLinYouKe@ddgksf2013
+# > YouLinYouKe
 https://new-app-api.ylyk.com/v1/user/myinfo/adviser url reject
-# > YinkeZhiBo@kyle
+# > YinkeZhiBo
 ^https?:\/\/service\.busi\.inke\.cn\/api\/flash\/screen url reject
 # > YinxiangNote
 ^https?:\/\/app\.yinxiang\.com\/ads\/ url reject-200
