--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -4,13 +4,13 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        2022-12-30
+// @UpdateTime        2023-01-01
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：195）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @Version           V2.0(217)
+// @Version           V2.0(218)
 // @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有或已失效
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
@@ -455,7 +455,7 @@ https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryInfoFlow url scri
 https://ccsp-egmas.sf-express.com/cx-app-base/base/app/ad/queryAdImages url reject-dict
 ^https?:\/\/shopic\.sf-express\.com\/crm\/mobile\/common\/flashscreen url reject
 # > shihuo
-^https?:\/\/sh-gateway\.shihuo\.cn\/v\d\/services\/sh-adapi\/home\/screen url reject-200
+^https?:\/\/sh-gateway\.shihuo\.cn\/v\d\/services\/sh-adapi\/home\/(screen|ad) url reject
 # > Soul
 ^https:\/\/data-collector\.soulapp\.cn\/api\/data\/report$ url reject
 # > Stay
