--- a/AdBlock/WeChat.conf
+++ b/AdBlock/WeChat.conf
@@ -3,11 +3,11 @@
 // @Author            @ddgksf2021
 // @TgChannel         https://t.me/ddgksf2021
 // @Function          Block AD
-// @ScriptTime        20210706
+// @ScriptTime        2023-01-02
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/WeChat.conf
 // ==/UserScript==
 
 # > WeChat Official Account
-^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
 
 hostname=mp.weixin.qq.com
